# rust_oss_sdk

oss_sdk/: Cargo.toml
oss_sdk/src/: lib.rs  oss.rs  statics.rs
oss_sdk/src/http_client/: auth.rs  errors.rs  mod.rs  requests.rs  responses.rs  sign_and_dispatch.rs
oss_sdk/src/types/: errors.rs  mod.rs  regions.rs  schema.rs  stream.rs
oss_sdk/src/types/requests/: get_object.rs  mod.rs
