[package]
name = "oss_sdk"
version = "0.1.0"
authors = ["HuXingYu <huxingyu@shimo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.8"

http = "0.2"

url = "2.2"

reqwest = { version="0.11" }

base64 = "0.13"

chrono = "0.4"

rust-crypto = "^0.2"

log = "0.4.6"

async-trait = "0.1"


bytes = "1.0"

derive_more = "0.99"

tokio = { version="1.5", features=["macros"] }
